// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MarketplaceListingCard - Snapshots > matches the auction listing snapshot rendered from an index entry 1`] = `
<a
  aria-label="View 35mm rangefinder camera"
  class="group relative block rounded-xl transition-transform duration-300 ease-out outline-none hover:z-10 hover:scale-110 hover:rotate-(--card-hover-rotation) focus-visible:ring-2 focus-visible:ring-ring motion-reduce:transform-none motion-reduce:transition-none"
  href="/marketplace/listing/yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy/rangefinder_camera"
  style="--card-hover-rotation: 0deg;"
>
  <div
    class="flex flex-col rounded-xl bg-card text-card-foreground shadow-sm h-full gap-0 overflow-hidden border-0 py-0 transition-all group-hover:shadow-[0_24px_64px_-8px_rgba(0,0,0,0.8),0_8px_24px_rgba(0,0,0,0.5)]"
    data-slot="card"
    data-testid="card"
  >
    <div
      class="relative flex aspect-square items-center justify-center overflow-hidden bg-linear-to-br from-emerald-500/40 via-teal-500/20 to-background"
    >
      <div
        class="absolute inset-0 bg-[radial-gradient(circle_at_70%_20%,rgba(255,255,255,0.16),transparent_32%)]"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-camera size-20 text-foreground opacity-75 drop-shadow-xl transition-transform group-hover:scale-105"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.997 4a2 2 0 0 1 1.76 1.05l.486.9A2 2 0 0 0 18.003 7H20a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2h1.997a2 2 0 0 0 1.759-1.048l.489-.904A2 2 0 0 1 10.004 4z"
        />
        <circle
          cx="12"
          cy="13"
          r="3"
        />
      </svg>
      <img
        alt="35mm rangefinder camera"
        class="h-auto max-w-full absolute inset-0 object-cover"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        src="https://homeserver.example/pub/pubky.app/marketplace/v1/media/image_01?pubky-host=yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
      <div
        class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute top-3 left-3 gap-1 bg-background/85 text-foreground shadow-sm backdrop-blur-md"
        data-slot="badge"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-gavel size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m14 13-8.381 8.38a1 1 0 0 1-3.001-3l8.384-8.381"
          />
          <path
            d="m16 16 6-6"
          />
          <path
            d="m21.5 10.5-8-8"
          />
          <path
            d="m8 8 6-6"
          />
          <path
            d="m8.5 7.5 8 8"
          />
        </svg>
        Auction
      </div>
      <button
        aria-label="Add to watchlist"
        aria-pressed="false"
        class="absolute top-2.5 right-2.5 z-10 flex size-8 items-center justify-center rounded-full bg-background/85 text-foreground shadow-sm backdrop-blur-md transition-colors hover:text-brand focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none"
        data-cy="marketplace-card-watch-toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bell size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.268 21a2 2 0 0 0 3.464 0"
          />
          <path
            d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
          />
        </svg>
      </button>
      <div
        class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent text-secondary-foreground [a&]:hover:bg-secondary/90 absolute right-3 bottom-3 bg-background/85 backdrop-blur-md"
        data-slot="badge"
        data-variant="secondary"
      >
        Ends 
        Aug 29
      </div>
    </div>
    <div
      class="flex min-w-0 flex-1 flex-col gap-4 p-4"
      data-slot="card-content"
    >
      <div
        class="space-y-1"
      >
        <h2
          class="line-clamp-2 text-base leading-6 font-semibold text-foreground"
          data-testid="typography"
        >
          35mm rangefinder camera
        </h2>
        <p
          class="font-medium truncate text-sm text-muted-foreground"
          data-testid="typography"
        >
          Proof of Film
        </p>
      </div>
      <div
        class="mt-auto space-y-1"
      >
        <span
          class="flex items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-xs tracking-wide text-muted-foreground uppercase"
          data-slot="label"
        >
          Starting bid
        </span>
        <div
          class="flex flex-wrap items-baseline gap-x-2 gap-y-1"
        >
          <p
            class="text-xl leading-7 font-semibold text-brand"
            data-testid="typography"
          >
            <span>
              $45.00
            </span>
          </p>
        </div>
      </div>
      <div
        class="flex flex-wrap items-center justify-between gap-2 border-t border-border/60 pt-3"
      >
        <span
          class="font-medium text-xs text-muted-foreground"
          data-testid="typography"
        >
          Excellent
        </span>
        <div
          class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90"
          data-slot="badge"
          data-variant="secondary"
        >
          Shipping
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`MarketplaceListingCard - Snapshots > matches the fixed-price listing snapshot 1`] = `
<a
  aria-label="View Vintage leather boots"
  class="group relative block rounded-xl transition-transform duration-300 ease-out outline-none hover:z-10 hover:scale-110 hover:rotate-(--card-hover-rotation) focus-visible:ring-2 focus-visible:ring-ring motion-reduce:transform-none motion-reduce:transition-none"
  href="/marketplace/listing/yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy/leather_boots"
  style="--card-hover-rotation: 0deg;"
>
  <div
    class="flex flex-col rounded-xl bg-card text-card-foreground shadow-sm h-full gap-0 overflow-hidden border-0 py-0 transition-all group-hover:shadow-[0_24px_64px_-8px_rgba(0,0,0,0.8),0_8px_24px_rgba(0,0,0,0.5)]"
    data-slot="card"
    data-testid="card"
  >
    <div
      class="relative flex aspect-square items-center justify-center overflow-hidden bg-linear-to-br from-cyan-500/40 via-blue-500/20 to-background"
    >
      <div
        class="absolute inset-0 bg-[radial-gradient(circle_at_70%_20%,rgba(255,255,255,0.16),transparent_32%)]"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-footprints size-20 text-foreground opacity-75 drop-shadow-xl transition-transform group-hover:scale-105"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 16v-2.38C4 11.5 2.97 10.5 3 8c.03-2.72 1.49-6 4.5-6C9.37 2 10 3.8 10 5.5c0 3.11-2 5.66-2 8.68V16a2 2 0 1 1-4 0Z"
        />
        <path
          d="M20 20v-2.38c0-2.12 1.03-3.12 1-5.62-.03-2.72-1.49-6-4.5-6C14.63 6 14 7.8 14 9.5c0 3.11 2 5.66 2 8.68V20a2 2 0 1 0 4 0Z"
        />
        <path
          d="M16 17h4"
        />
        <path
          d="M4 13h4"
        />
      </svg>
      <img
        alt="Vintage leather boots"
        class="h-auto max-w-full absolute inset-0 object-cover"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        src="https://homeserver.example/pub/pubky.app/marketplace/v1/media/leather_boots_image?pubky-host=yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
      <div
        class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute top-3 left-3 gap-1 bg-background/85 text-foreground shadow-sm backdrop-blur-md"
        data-slot="badge"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-star size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
          />
        </svg>
        Buy now
      </div>
      <button
        aria-label="Add to watchlist"
        aria-pressed="false"
        class="absolute top-2.5 right-2.5 z-10 flex size-8 items-center justify-center rounded-full bg-background/85 text-foreground shadow-sm backdrop-blur-md transition-colors hover:text-brand focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none"
        data-cy="marketplace-card-watch-toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex min-w-0 flex-1 flex-col gap-4 p-4"
      data-slot="card-content"
    >
      <div
        class="space-y-1"
      >
        <h2
          class="line-clamp-2 text-base leading-6 font-semibold text-foreground"
          data-testid="typography"
        >
          Vintage leather boots
        </h2>
        <p
          class="font-medium truncate text-sm text-muted-foreground"
          data-testid="typography"
        >
          Satoshi Vintage
        </p>
      </div>
      <div
        class="mt-auto space-y-1"
      >
        <span
          class="flex items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-xs tracking-wide text-muted-foreground uppercase"
          data-slot="label"
        >
          Price
        </span>
        <div
          class="flex flex-wrap items-baseline gap-x-2 gap-y-1"
        >
          <p
            class="text-xl leading-7 font-semibold text-brand"
            data-testid="typography"
          >
            <span>
              $125.00
            </span>
          </p>
        </div>
      </div>
      <div
        class="flex flex-wrap items-center justify-between gap-2 border-t border-border/60 pt-3"
      >
        <span
          class="font-medium text-xs text-muted-foreground"
          data-testid="typography"
        >
          Good
        </span>
        <div
          class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90"
          data-slot="badge"
          data-variant="secondary"
        >
          Shipping
        </div>
      </div>
    </div>
  </div>
</a>
`;
